# lux

./: .gitattributes  .gitignore  AI.md  ANALYSIS.md  LICENSE  LINKEDIN_POST.md  PLAN.md  PLAYGROUND_PLAN.md  README.md  SPECIFICATION.md  compile_all.bat  compile_gltf_all.bat  compile_gltf_forward.bat  compile_gltf_layered_forward.bat  compile_gltf_layered_rt.bat  compile_gltf_rt.bat  compile_mesh.bat  compile_multi_light.bat  debug_playground.bat  download_khr_splat_tests.bat  download_sponza.bat  download_sponza.py  pyproject.toml  run_deferred_cpp.bat  run_deferred_python.bat  run_deferred_rust.bat  run_interactive_cartoon_cpp.bat  run_interactive_cartoon_metal.sh  run_interactive_cartoon_rt_cpp.bat  run_interactive_cartoon_rt_rust.bat  run_interactive_cartoon_rust.bat  run_interactive_cpp.bat  run_interactive_cpp_rt.bat  run_interactive_metal.sh  run_interactive_rust.bat  run_interactive_rust_rt.bat  run_interactive_sheen_cpp.bat  run_interactive_sheen_metal.sh  run_interactive_sheen_rt_cpp.bat  run_interactive_sheen_rt_rust.bat  (+19 more)
assets/: ClearCoatTest.glb
data/: benchmark_cases.json
docs/: debug-session-transcript.md  debug-test-prompt.md  debugger-guide.md  gallery.md  language-reference.md  optimization-features.md  project-structure.md  rendering-engines.md  usage.md
examples/: advanced_materials_demo.lux  autodiff_demo.lux  brdf_gallery.lux  cartoon_toon.lux  colorspace_demo.lux  compute_double.lux  compute_gradient.lux  compute_histogram.lux  compute_image.lux  compute_mandelbrot.lux  compute_reduction.lux  compute_saxpy.lux  debug_features_demo.lux  debug_grazing_angle.json  debug_playground.lux  debug_playground_inputs.json  debug_zero_roughness.json  deferred_basic.gbuf.frag.json  deferred_basic.gbuf.vert.json  deferred_basic.light.frag.json  deferred_basic.light.vert.json  deferred_basic.lux  differentiable.lux  gaussian_splat.comp.json  gaussian_splat.frag.json  gaussian_splat.lux  gaussian_splat.vert.json  gaussian_splat_linear.comp.json  gaussian_splat_linear.frag.json  gaussian_splat_linear.lux  gaussian_splat_linear.vert.json  gaussian_splat_rt.lux  gaussian_splat_rt.rchit.json  gaussian_splat_rt.rgen.json  gaussian_splat_rt.rint.json  gaussian_splat_rt.rmiss.json  gaussian_splat_rt_sh0.lux  gaussian_splat_rt_sh0.rchit.json  gaussian_splat_rt_sh0.rgen.json  gaussian_splat_rt_sh0.rint.json  (+58 more)
luxc/: __init__.py  __main__.py  cli.py  compiler.py  hot_reload.py  reload_protocol.py  watcher.py
playground/: __init__.py  advanced_materials_demo.frag.json  autodiff_demo.frag.json  brdf_gallery.frag.json  colorspace_demo.frag.json  deferred_engine.py  differentiable.frag.json  engine.py  gltf_loader.py  gltf_pbr.frag.json  gltf_pbr_rt.rchit.json  gltf_pbr_rt.rgen.json  gltf_pbr_rt.rmiss.json  hello_triangle.frag.json  hello_triangle.vert.json  ibl_demo.frag.json  lighting_demo.frag.json  math_builtins_demo.frag.json  pbr_basic.frag.json  pbr_basic.vert.json  pbr_surface.frag.json  pbr_surface.vert.json  phong.lux  preprocess_ibl.py  preview.py  procedural_noise.frag.json  reflected_pipeline.py  render_harness.py  render_pbr.py  rt_manual.rchit.json  rt_manual.rgen.json  rt_manual.rmiss.json  rt_pathtracer.rchit.json  rt_pathtracer.rgen.json  rt_pathtracer.rmiss.json  run_compute.py  scene_utils.py  scheduled_pbr.frag.json  scheduled_pbr.vert.json  sdf_shapes.frag.json  (+19 more)
playground_cpp/: CMakeLists.txt
playground_cpp/shaders/: fullscreen.vert.glsl
playground_cpp/src/: camera.cpp  camera.h  deferred_renderer.cpp  deferred_renderer.h  editor_panels.cpp  editor_panels.h  editor_state.h  editor_ui.cpp  editor_ui.h  gltf_loader.cpp  gltf_loader.h  main.cpp  material_ubo.h  mesh_renderer.cpp  mesh_renderer.h  meshlet.cpp  meshlet.h  metal_bridge.h  metal_bridge.mm  metal_context.cpp  metal_context.h  metal_fullscreen_quad.metal  metal_main.cpp  metal_mesh_renderer.cpp  metal_mesh_renderer.h  metal_raster_renderer.cpp  metal_raster_renderer.h  metal_renderer_interface.h  metal_scene.cpp  metal_scene.h  metal_scene_manager.cpp  metal_scene_manager.h  metal_screenshot.cpp  metal_screenshot.h  metal_shader_transpiler.cpp  metal_shader_transpiler.h  metal_splat_renderer.cpp  metal_splat_renderer.h  raster_renderer.cpp  raster_renderer.h  (+22 more)
playground_rust/: Cargo.toml
playground_rust/src/: camera.rs  deferred_renderer.rs  gltf_loader.rs  main.rs  mesh_renderer.rs  meshlet.rs  raster_renderer.rs  reflected_pipeline.rs  rt_renderer.rs  scene.rs  scene_manager.rs  screenshot.rs  splat_renderer.rs  spv_loader.rs  vulkan_context.rs
playground_web/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
projects/nadrin-pbr/lux-variant/: CMakeLists.txt
projects/nadrin-pbr/lux-variant/data/shaders/lux/: pbr.lux  pbr_optimized.lux  skybox.lux  spbrdf.lux  tonemap.lux
projects/nadrin-pbr/lux-variant/data/shaders/spirv/: pbr.frag.json  pbr.frag.spv.lux  pbr.vert.json  pbr.vert.spv.lux  skybox.frag.json  skybox.frag.spv.lux  skybox.vert.json  skybox.vert.spv.lux  spbrdf.comp.json  tonemap.frag.json  tonemap.frag.spv.lux  tonemap.vert.spv.lux
projects/nadrin-pbr/lux-variant/src/: vulkan.cpp  vulkan.hpp
projects/nadrin-pbr/upstream/: CMakeLists.txt
projects/nadrin-pbr/upstream/src/common/: main.cpp  renderer.hpp
skills/: cpu-guidance.md  debugging.md  gpu-performance.md  layer-composition.md  optimization.md  pbr-authoring.md  shader-debugger.md
tests/: manual_test_p18_2.py  test_ai_config.py  test_ai_generate.py  test_ai_materials.py  test_ai_providers.py  test_ai_reference_match.py  test_ai_skills.py  test_ai_video.py  test_algebraic_fold.py  test_autodiff.py  test_autotype.py  test_benchmark.py  test_brdf_visualization.py  test_codegen.py  test_compute_shader.py  test_cost_estimator.py  test_cse.py  test_custom_layers.py  test_dataset.py  test_dead_code.py  test_debug_features.py  test_debugger.py  test_deferred_rendering.py  test_e2e.py  test_gaussian_splat_rt.py  test_gaussian_splatting.py  test_gltf_extensions.py  test_hot_reload.py  test_khr_splat_conformance.py  test_lighting_block.py  test_loops.py  test_material_properties.py  (+20 more)
(+319 files in other folders)
