[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "luxc"
version = "0.1.0"
description = "Lux shader language compiler — math-first shaders to SPIR-V"
requires-python = ">=3.11"
dependencies = [
    "lark>=1.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
ai = ["anthropic>=0.30"]

[project.scripts]
luxc = "luxc.cli:main"

[tool.setuptools.packages.find]
include = ["luxc*"]
