[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "luxc"
version = "0.1.0"
description = "Lux shader language compiler — math-first shaders to SPIR-V"
requires-python = ">=3.11"
dependencies = [
    "lark>=1.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
ai = ["anthropic>=0.30"]
ai-anthropic = ["anthropic>=0.30"]
ai-openai = ["openai>=1.0"]
ai-gemini = ["google-generativeai>=0.5"]
ai-video = ["opencv-python>=4.8"]
ai-all = ["anthropic>=0.30", "openai>=1.0", "google-generativeai>=0.5", "opencv-python>=4.8"]

[project.scripts]
luxc = "luxc.cli:main"

[tool.setuptools.packages.find]
include = ["luxc*"]
